trying things out

--- a/Medizinplattform/.classpath
+++ b/Medizinplattform/.classpath
@@ -19,6 +19,7 @@
 			<attribute name="owner.project.facets" value="jst.jsf"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Ilja/git/de.medizinplattform.git.github/Medizinplattform/WebContent/WEB-INF/lib/primefaces-4.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EclipseLink 2.5.0 - Kepler">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
