--- a/Medizinplattform/WebContent/WEB-INF/web.xml
+++ b/Medizinplattform/WebContent/WEB-INF/web.xml
@@ -10,6 +10,24 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
+  
+  
+  <filter>
+  	<filter-name>SecurityFilter</filter-name>
+  	<filter-class>de.medizinplattform.filters.SecurityFilter</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>SecurityFilter</filter-name>
+  	<url-pattern>/faces/admin.xhtml</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>SecurityFilter</filter-name>
+  	<url-pattern>/faces/chronicle.xhtml</url-pattern>
+  </filter-mapping>
+  
+  
   <context-param>
     <description>State saving method: 'client' or 'server' (=default). See JSF Specification 2.5.2</description>
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
