--- a/Medizinplattform/WebContent/WEB-INF/web.xml
+++ b/Medizinplattform/WebContent/WEB-INF/web.xml
@@ -10,7 +10,11 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/faces/*</url-pattern>
   </servlet-mapping>
-  
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.xhtml</url-pattern>
+  </servlet-mapping>
+   
   
   <filter>
   	<filter-name>SecurityFilter</filter-name>
