--- a/Medizinplattform/src/de/medizinplattform/managedbeans/MyMessage.properties
+++ b/Medizinplattform/src/de/medizinplattform/managedbeans/MyMessage.properties
@@ -1,3 +1,3 @@
-javax.faces.validator.LengthValidator.MINIMUM = Password to short! Minimum length of signs is 4!
-javax.faces.validator.RegexValidator.NOT_MATCHED = Not allowed signs in Password!
+javax.faces.validator.LengthValidator.MINIMUM = Password too short! Minimum length of is 3 signs!
+javax.faces.validator.RegexValidator.NOT_MATCHED = Not allowed signs in your password!
 javax.faces.component.UIInput.REQUIRED={0}: Empty field is not allowed!
