--- a/Medizinplattform/.settings/org.eclipse.core.resources.prefs
+++ b/Medizinplattform/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/de/medizinplattform/managedbeans/AdminBean.java=UTF-8
 encoding//src/de/medizinplattform/managedbeans/LoginBean.java=UTF-8
