--- a/Medizinplattform/src/de/medizinplattform/managedbeans/MyMessage.properties
+++ b/Medizinplattform/src/de/medizinplattform/managedbeans/MyMessage.properties
@@ -1,3 +1,3 @@
-javax.faces.validator.LengthValidator.MINIMUM = Password too short! Minimum length of is 3 signs!
-javax.faces.validator.RegexValidator.NOT_MATCHED = Not allowed signs!
-javax.faces.component.UIInput.REQUIRED={0}: Empty field is not allowed!
+javax.faces.validator.LengthValidator.MINIMUM = Das Passwort ist zu kurz! Bitte geben Sie mindestens 3 Zeichen ein!
+javax.faces.validator.RegexValidator.NOT_MATCHED = Ungültige Zeichen verwendet!
+javax.faces.component.UIInput.REQUIRED={0}: Ein leeres Feld ist nicht gültig!
